syntax = "proto3";

package update;

option go_package = "github.com/werbot/werbot/internal/grpc/proto/update";

import "google/protobuf/timestamp.proto";

service UpdateHandlers {
    rpc GetUpdate(GetUpdate.Request) returns (GetUpdate.Response) {}
}

// rpc GetUpdate
message GetUpdate {
    message Request {}

    message Response {
        message Component {
            string version = 1;
            string version_after = 2;
            string description = 3;
            google.protobuf.Timestamp issued_at = 4;
        }
        map<string, Component> components = 1;
    }
}
// -----------------------------------------------------
